--- a/style/visual.less
+++ b/style/visual.less
@@ -4,8 +4,12 @@ body {
     margin: 32px;
 }
 
-g.arc {
+g.arc {    
     fill: steelblue;
+}
+
+svg{
+    padding-bottom: 2px;
 }
 
 g.pointer {
@@ -18,12 +22,13 @@ g.label text {
     font-size: 14px;
     font-weight: bold;
     fill: #666;
+    word-wrap: break-word;
 }
 
 svg text {
     padding-top: 5px;
     text-anchor: middle;
-    font-size: 10px;  
+    font-size: 10px;
     font-weight: bold;
     fill: #666;  
 }
