--- a/style/visual.less
+++ b/style/visual.less
@@ -9,7 +9,7 @@ g.arc {
 }
 
 svg{
-    padding-bottom: 2px;
+    padding-bottom: 3px;
 }
 
 g.pointer {
@@ -23,14 +23,23 @@ g.label text {
     font-weight: bold;
     fill: #666;
     word-wrap: break-word;
+    
 }
 
 svg text {
-    padding-top: 5px;
+    padding-top: 6px;
     text-anchor: middle;
     font-size: 10px;
     font-weight: bold;
     fill: #666;  
+}
+
+svg .categoryText{
+    padding-bottom: 5px;
+    text-anchor: middle;
+    font-size: 11px;
+    font-weight: bold;
+    fill: black;    
 }
 
 g.gaugeBackground {
