--- a/style/visual.less
+++ b/style/visual.less
@@ -4,17 +4,21 @@ body {
     margin: 32px;
 }
 
-g.arc {    
-    fill: steelblue;
+g.arc {        
+    
 }
 
 svg{
-    padding-bottom: 3px;
+    padding-bottom: 3px;    
 }
 
 g.pointer {
     fill: #e85116;
     stroke: #b64011;
+}
+
+g.textGroup{
+    padding-top: 5px;
 }
 
 g.label text {
