--- a/style/visual.less
+++ b/style/visual.less
@@ -1,15 +1,9 @@
-
-body {
-    font-family:  Helvetica, Arial, sans-serif;
-    margin: 32px;
-}
-
 g.arc {        
     
 }
 
 svg{
-    padding-bottom: 3px;    
+    padding-bottom: 2px;
 }
 
 g.pointer {
@@ -23,25 +17,37 @@ g.textGroup{
 
 g.label text {
     text-anchor: middle;
-    font-size: 14px;
+    font-size: 10px;
     font-weight: bold;
     fill: #666;
-    word-wrap: break-word;
-    
+    word-wrap: break-word;    
 }
 
-svg text {
-    padding-top: 6px;
+svg text {    
     text-anchor: middle;
-    font-size: 10px;
+    font-size: 8px;
+    font-weight: bold;
+    fill: #666;  
+}
+
+svg .textSmall {    
+    text-anchor: middle;
+    font-size: 6px;
     font-weight: bold;
     fill: #666;  
 }
 
 svg .categoryText{
-    padding-bottom: 5px;
+    padding-bottom: 3px;    
     text-anchor: middle;
-    font-size: 11px;
+    font-size: 10px;
+    font-weight: bold;
+    fill: black;    
+}
+
+svg .categoryTextSmall{    
+    text-anchor: middle;
+    font-size: 8px;
     font-weight: bold;
     fill: black;    
 }
