--- a/style/visual.less
+++ b/style/visual.less
@@ -16,8 +16,9 @@ g.textGroup{
 }
 
 g.label text {
+    padding-left: 3px;
     text-anchor: middle;
-    font-size: 10px;
+    font-size: 15px;
     font-weight: bold;
     fill: #666;
     word-wrap: break-word;    
@@ -25,7 +26,7 @@ g.label text {
 
 svg text {    
     text-anchor: middle;
-    font-size: 8px;
+    font-size: 9px;
     font-weight: bold;
     fill: #666;  
 }
@@ -35,6 +36,21 @@ svg .textSmall {
     font-size: 6px;
     font-weight: bold;
     fill: #666;  
+}
+
+svg .textLarge {    
+    text-anchor: middle;
+    font-size: 15px;
+    font-weight: bold;
+    fill: #666;  
+}
+
+svg .categoryTextLarge{
+    padding-bottom: 3px;    
+    text-anchor: middle;
+    font-size: 17px;
+    font-weight: bold;
+    fill: black;    
 }
 
 svg .categoryText{
@@ -47,7 +63,7 @@ svg .categoryText{
 
 svg .categoryTextSmall{    
     text-anchor: middle;
-    font-size: 8px;
+    font-size: 6px;
     font-weight: bold;
     fill: black;    
 }
